# netflix-omdb-pipeline

./: .env.example  .gitignore  AI_ASSIST.md  Dockerfile  README.md  data_cleaning_report.md  fetch_OMDb_api.py  fetch_kaggle_data.py  hello.py  pyproject.toml
.github/: autograder.py
src/: clean_csv.py  models.py  pipeline.py  storage.py
tests/: test_models.py
