[project]
name = "my-pipeline"
version = "0.1.0"
description = "Netflix and OMDb ETL Data Pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic==2.10.6",
    "psycopg2-binary==2.9.10",
    "azure-storage-blob==12.25.1",
    "azure-core==1.30.2",
    "requests==2.32.3",
    "pandas==2.2.3",
    "python-dotenv>=1.0",
    "kaggle>=2.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.0",
]
